--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-moment": "^0.9.2"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.8.0"
